--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     <!-- Testimonials -->
 
     <section id="testimonials">
-      <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" data-pause="hover">
+      <div id="testimonial-carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" data-bs-interval="1000">
             <h2>
               I no longer have to sniff other dogs for love. I've found the hottest
               Corgi on TinDog. Woof.
